fix avatar left alignment

--- a/src/views/about/contributor-card.module.scss
+++ b/src/views/about/contributor-card.module.scss
@@ -77,6 +77,7 @@
 
 	position: absolute;
 	top: calc(-1 * var(--contributor_container-offset));
+	left: calc(-1 * var(--contributor_avatar_border_width));
 }
 
 .name {
